ChatRoonList 반환시 LastTime 기준은 해당 유저의 세션 종료 시간으로 변경